--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,14 @@
 /.env.local
 /.env.local.php
 /.env.*.local
+/.env
+.env
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
